force-app/main/default/objects/Booking_Distance_Relation__c/Booking_Distance_Relation__c.object-meta.xml
<CustomObject>
    <description>A Custom object to relate the distances and dates between Bookings, to aid in booking conflict detection</description>
    <label>Booking Distance Relation</label>
    <nameField>
        <displayFormat>BDR-{00000}</displayFormat>
        <label>Booking Distance Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Distance Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>