force-app/main/default/objects/Booking_Distance_Relation__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Booking Distance Relations</relationshipLabel>
    <relationshipName>Booking_Distance_Relations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>