force-app/main/default/objects/Booking_Distance_Relation__c/fields/Booking_Form_1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Booking Form 1</description>
    <label>Booking Form 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Booking Form Artist Should Match the Artist on the Record</errorMessage>
        <filterItems>
            <field>$Source.Artist__c</field>
            <operation>equals</operation>
            <valueField>Booking_Form__c.Artist__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Booking Distance Relations</relationshipLabel>
    <relationshipName>Booking_Distance_Relations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>