force-app/main/default/objects/Booking_Distance_Relation__c/fields/Days_between_bookings__c.field-meta.xml
<CustomField>
    <fullName>Days_between_bookings__c</fullName>
    <formula>IF( Booking_Form_1__r.Date_of_Performance__c &gt;  Booking_Form_2__r.Date_of_Performance__c,
			Booking_Form_1__r.Date_of_Performance__c - Booking_Form_2__r.Date_of_Performance__c,
			Booking_Form_2__r.Date_of_Performance__c - Booking_Form_1__r.Date_of_Performance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the amount of days between the bookings</inlineHelpText>
    <label>Days between bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>