force-app/main/default/objects/Booking_Distance_Relation__c/fields/Distance_in_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_in_Km__c</fullName>
    <formula>Town_Distance__r.Driving_Distance_Km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Distance in Km between the two Performances</inlineHelpText>
    <label>Distance in Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>