force-app/main/default/objects/Booking_Distance_Relation__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there is no conflict</inlineHelpText>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>