force-app/main/default/objects/Booking_Distance_Relation__c/fields/Town_Distance__c.field-meta.xml
<CustomField>
    <fullName>Town_Distance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Applicable Town Distance Record</inlineHelpText>
    <label>Town Distance</label>
    <referenceTo>Town_Distance__c</referenceTo>
    <relationshipLabel>Booking Distance Relations</relationshipLabel>
    <relationshipName>Booking_Distance_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>