force-app/main/default/objects/Booking_Distance_Relation__c/fields/TriggerDateTime__c.field-meta.xml
<CustomField>
    <fullName>TriggerDateTime__c</fullName>
    <description>Used to trigger Automations</description>
    <label>TriggerDateTime</label>
    <type>DateTime</type>
</CustomField>